--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "rollup-starter-lib",
+  "name": "testpack",
   "version": "1.0.0",
-  "main": "dist/how-long-till-lunch.cjs.js",
-  "module": "dist/how-long-till-lunch.esm.js",
-  "browser": "dist/how-long-till-lunch.umd.js",
-  "dependencies": {
-    "ms": "^2.0.0"
-  },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.1",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "rollup": "^1.29.0"
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^8.1.0",
+    "prettier": "^2.0.5",
+    "rollup": "^2.18.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "webpack": "^5.19.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^4.4.0"
   },
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "test": "node test/test.js",
-    "pretest": "npm run build"
-  },
-  "files": [
-    "dist"
-  ]
+    "build": "yarn build:r && yarn build:w",
+    "build:r": "rollup -c",
+    "build:w": "webpack"
+  }
 }
